--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "com.example.hatman"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -97,4 +97,7 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.room:room-ktx:$room_version"
+
+    //Data Store
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
 }
